<resources>
    <string name="app_name">Dicoding Event</string>
    <string name="title_home">Dicoding Event</string>
    <string name="title_upcoming">Upcoming Events</string>
    <string name="title_finished">Finished Events</string>

    <string name="events_name">Judul Event</string>
    <string name="description">Deskripsi</string>

    <string name="seconds">%d seconds elapsed</string>
    <string name="hello_dicoding">Hello Dicoding!</string>
    <string name="dicoding_events">Dicoding Events</string>
    <string name="rec">Recomendation Event</string>
    <string name="upcoming">Upcoming Events</string>
    <string name="finished_events">Finished Events</string>
    <string name="owner">Owner</string>
    <string name="time">Time</string>
    <string name="registrant">Si</string>
    <string name="category">Category</string>
    <string name="descript">Description</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="upcomingbottom">Upcoming</string>
    <string name="finished">Finished</string>
    <string name="favorite_event">Favorite Event</string>
</resources>